After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658337 - Fix missing return statements
Fix missing return statements
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other All
: Normal normal
: ---
Assigned To: Li Yuan
Depends on:
Blocks:
 
 
Reported: 2011-09-06 09:10 UTC by Vincent Untz
Modified: 2011-09-19 03:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix missing return statements (885 bytes, patch)
2011-09-06 09:10 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2011-09-06 09:10:40 UTC
2.1.91 has two warnings about missing return statements that create issues in openSUSE. The patch is rather trivial.
Comment 1 Vincent Untz 2011-09-06 09:10:43 UTC
Created attachment 195764 [details] [review]
Fix missing return statements
Comment 2 Mike Gorse 2011-09-07 16:19:28 UTC
Comment on attachment 195764 [details] [review]
Fix missing return statements

Looks good. Thanks for the catch.




>From 2634b72b59d18699353514348059c7d31aaf154c Mon Sep 17 00:00:00 2001
>From: Vincent Untz <vuntz@gnome.org>
>Date: Tue, 6 Sep 2011 08:21:22 +0200
>Subject: [PATCH] Fix missing return statements
>
>https://bugzilla.gnome.org/show_bug.cgi?id=658337
>---
> bus/at-spi-bus-launcher.c |    4 ++++
> 1 files changed, 4 insertions(+), 0 deletions(-)
>
>diff --git a/bus/at-spi-bus-launcher.c b/bus/at-spi-bus-launcher.c
>index 369998a..334258c 100644
>--- a/bus/at-spi-bus-launcher.c
>+++ b/bus/at-spi-bus-launcher.c
>@@ -205,6 +205,8 @@ ensure_a11y_bus (A11yBusLauncher *app)
>   close (app->pipefd[0]);
>   close (app->pipefd[1]);
>   app->state = A11Y_BUS_STATE_ERROR;
>+
>+  return FALSE;
> }
> 
> static void
>@@ -487,6 +489,8 @@ get_desktop_schema ()
>     if (!strcmp (schemas[i], "org.gnome.desktop.interface"))
>       return g_settings_new (schemas[i]);
>   }
>+
>+  return NULL;
> }
> 
> static void
>-- 
>1.7.6.1
Comment 3 Mike Gorse 2011-09-19 03:11:17 UTC
Comment on attachment 195764 [details] [review]
Fix missing return statements






>From 2634b72b59d18699353514348059c7d31aaf154c Mon Sep 17 00:00:00 2001
>From: Vincent Untz <vuntz@gnome.org>
>Date: Tue, 6 Sep 2011 08:21:22 +0200
>Subject: [PATCH] Fix missing return statements
>
>https://bugzilla.gnome.org/show_bug.cgi?id=658337
>---
> bus/at-spi-bus-launcher.c |    4 ++++
> 1 files changed, 4 insertions(+), 0 deletions(-)
>
>diff --git a/bus/at-spi-bus-launcher.c b/bus/at-spi-bus-launcher.c
>index 369998a..334258c 100644
>--- a/bus/at-spi-bus-launcher.c
>+++ b/bus/at-spi-bus-launcher.c
>@@ -205,6 +205,8 @@ ensure_a11y_bus (A11yBusLauncher *app)
>   close (app->pipefd[0]);
>   close (app->pipefd[1]);
>   app->state = A11Y_BUS_STATE_ERROR;
>+
>+  return FALSE;
> }
> 
> static void
>@@ -487,6 +489,8 @@ get_desktop_schema ()
>     if (!strcmp (schemas[i], "org.gnome.desktop.interface"))
>       return g_settings_new (schemas[i]);
>   }
>+
>+  return NULL;
> }
> 
> static void
>-- 
>1.7.6.1
Comment 4 Mike Gorse 2011-09-19 03:12:04 UTC
I've gone ahead and committed (a50504).