Fix missing return statements

https://bugzilla.gnome.org/show_bug.cgi?id=658337